# udocker

./: .coverage  .flake8  .gitignore  .mailmap  .mdlrc  .travis.yml  AUTHORS.md  CHANGELOG.md  CITING.md  CONTRIBUTING.md  Jenkinsfile  MANIFEST  MANIFEST.in  Makefile  README.md  SECURITY.md  SUMMARY.md  ansible_install.yaml  changelog  codemeta.json  conftest.py  coverage.xml  index.html  pylintrc  pylintrc-OLD  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  udocker  udocker.py
.sqa/: config.yml  docker-compose.yml  script.find_doc_files.sh  script.flake8.sh  script.nosetests.sh  script.pytest.sh
browser/: company.html  country.html  data_sources.html  demographics.html  dockerhub.html  domain.html  downloads.html  filter.html  footer.html  forge-contributors.html  forge.html  gridster.css  index.html  irc-contributors.html  irc-repos.html  irc.html  its-companies.html  its-contributors.html  its-countries.html  its-domains.html  its-organizations.html  its-projects.html  its-repos.html  its-states.html  its.html  its_1-companies.html  its_1-contributors.html  its_1-countries.html  its_1-domains.html  its_1-organizations.html  its_1-projects.html  its_1-repos.html  its_1-states.html  its_1.html  meetup-group.html  meetup-next_meetings.html  meetup-past_meetings.html  meetup.html  mls-companies.html  mls-contributors.html  (+37 more)
doc/: css  custom.css  footer.html  index.html  installation_manual.md  lib  navbar.html  project-card.html  refcard.html  reference_card.md  treemap.json  udocker.1  udocker_organ.md  user_manual.md  vizjsapi2.json
docker_sqaaastools/: Dockerfile-bandit  Dockerfile-find_doc_files  Dockerfile-git_tags  Dockerfile-jsonlint  Dockerfile-nosetests  Dockerfile-pytest  README.md  find_doc_files.py  get_git_tags.py
dockercicd/: Dockerfile  Dockerfile_bandit  Dockerfile_git  Dockerfile_gittags  Dockerfile_licensee  Dockerfile_pylint  README.md  checkCitable.py  entrypoint.sh  get_git_tags.py
docs/: cli_arch.md  index.md  installation_manual.md  make_release.md  reference_card.md  udocker.1  udocker_organ.md  user_manual.md
etc/: metadata.json  udocker.conf
paper/: paper.bib  paper.md
scripts/: script.acc.sh  script.bandit.sh  script.codemeta.sh  script.get_git_tags.sh  script.jsonlint.sh  script.licensee.sh  script.markdownlint.sh
templates/: apply_template.py  body.template  body.template.events  body.template.releases  bs3_upgrade.sh  build_panel.py  gen.sh  webstats.tmpl
tests/: func_tests.py  pylintrc  (+4 more)
(+358 files in other folders)
