[project]
name = "udocker"
version = "attr: udocker.__version__"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra --cov-report term --no-cov"
testpaths = [
    "test/units",
]

[tool.coverage.run]
source = ["udocker"]
