[metadata]
author = Jorge Gomes
author_email = udocker@lip.pt
url = https://github.com/indigo-dc/udocker
description = A basic user tool to execute simple docker containers in batch or interactive systems without root privileges
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Linux containers, HPC on cloud, Virtualization
license = Apache Software License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System
    Topic :: Utilities

[options]
packages = find:
zip_safe = False
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts = udocker=udocker.maincmd:main

[options.package_data]
data_files = etc/udocker.conf

[options.extras_require]
dev = bandit
      build
      coverage
      mock
      pip
      pycurl>=7.15.5
      pylint
      pytest
      pytest-cov
      pytest-mock
      twine
      wheel

[bdist_wheel]
universal = 1

[flake8]
extend-ignore = E402, F841, F821, E722
max-line-length = 101
exclude =
    build,
    dist,
    dockercicd,
    docker_sqaaastools,
    docs,
    etc,
    .git,
    paper,
    __pycache__,
    .pytest_cache,
    .sqa,
    .tox,
    udocker.egg-info,
    utils,
    .venv,
    .vscode

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']


[codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = .git,paper.bib
check-hidden = true
 ignore-regex =\bFinisFinish Terrae II\b
# some commands and unfortunate variable names
ignore-words-list = buildd,struc,regist
